Release 1.2.1: Compatible jdk > 1.8