@@ -132,8 +132,8 @@ graphviz.toFile(FileType.PNG).save("./", "example");
 **graph-support** support multi output formats if version >= 1.2.0 (only support svg before 1.2.0):
 
 |                                               | svg  | png  | jpg  | jpeg | gif  | tiff | pdf  |
-| --------------------------------------------- | ---- | ---- | ---- | ---- | ---- | ---- | ---- |
-| JDK (>=1.8)<br/>Add `java --add-opens java.desktop/sun.java2d=ALL-UNNAMED your_application` if jdk > 1.8 except svg type                                  | Y    | Y    | Y    | Y    | Y    | N    | N    |
+|-----------------------------------------------| ---- | ---- | ---- | ---- | ---- | ---- | ---- |
+| JDK (>=1.8)                                   | Y    | Y    | Y    | Y    | Y    | N    | N    |
 | Android 13 (API level 33)<br/>Only test >= 13 | Y    | Y    | N    | Y    | N    | N    | N    |
 | JDK (>=1.8) + batik(>=1.9)                    | Y    | Y    | Y    | Y    | Y    | Y    | N    |
 | JDK(>=1.8) + batik(>=1.9) + fop(>=2.4)        | Y    | Y    | Y    | Y    | Y    | Y    | Y    |
